# ProgrammierparadigmenCpp

./: .gitignore  ReadMe.txt
Aufgabe01-02/: Bewertung.csv  Bewertung.xlsx  BewertungFinal.csv  CMakeLists.txt  Feeback.docx
Aufgabe01-02/Changes/: Changes.txt
Aufgabe01-02/Code/: AtcoCommand.cpp  AtcoCommand.h  DateTime.h  Tests.cpp  Tests.h  Util.cpp  Util.h  WordSeqPlusCmds2.txt  main.cpp  main_aufgabe1.cpp
Aufgabe05/: Bewertung.csv  Bewertung.xlsx  BewertungFinal.csv  CMakeLists.txt
Aufgabe05/Changes/: Changes.txt
Aufgabe05/Code/: AtcoCommand.cpp  AtcoCommand.h  DateTime.h  Tests.cpp  Tests.h  Util.h  WordSeqPlusCmds1.txt  dosFarben.h  main.cpp  testMakros.h
Aufgabe06/: Bewertung.csv  Bewertung.xlsx  BewertungFinal.csv  CMakeLists.txt  Feedback.docx
Aufgabe06/Changes/: Changes.txt
Aufgabe06/Code/: AtcoCmds.cpp  AtcoCommand.cpp  AtcoCommand.h  FileName.cpp  FileName.h  Processing.h  Tests.cpp  Tests.h  bigWordsFileExpectedTypes.txt  dosFarben.h  expectedTypes.txt  main.cpp
Aufgabe07/: Bewertung.csv  Bewertung.txt  Bewertung.xlsx  BewertungFinal.csv  CMakeLists.txt  Feedback.docx  ~$Bewertung.xlsx
Aufgabe07/.cache/clangd/index/: AtcoCmds.cpp.7299116E39847C71.idx  AtcoCmds.h.E6611F43E76A1AE1.idx  AtcoCommand.cpp.BA5F8CABC74DE4A7.idx  AtcoCommand.h.D7AD47614BA8B70E.idx  DynArray.cpp.5F3FB3B503B90CAA.idx  DynArray.h.8E90DFD1DA42725D.idx  FileName.cpp.21F23F93C42A3FA8.idx  FileName.h.5F7A8943FD3DFE4D.idx  NumberExtractor.cpp.0B0E0A1846FF4CA1.idx  NumberExtractor.h.974316FD0911D697.idx  Processing.cpp.B77CFF8657AF4281.idx  Processing.h.2F05D2F12AE98139.idx  Tests.cpp.31C7EA32ACAF85A2.idx  Tests.h.5B69D9B6B0079E4D.idx  Util.cpp.4B1316D1C6BBF277.idx  Util.h.5B622703150B29A1.idx  dosFarben.h.942D0F7A09ED7271.idx  main.cpp.56B5FC7487F1033C.idx  testMakros.h.73780C1D8D9AEA74.idx
Aufgabe07/Code/: AtcoCmds.cpp  AtcoCmds.h  AtcoCommand.cpp  AtcoCommand.h  DynArray.cpp  DynArray.h  FileName.cpp  NumberExtractor.cpp  NumberExtractor.h  Processing.cpp  Processing.h  Tests.cpp  Tests.h  Util.h  main.cpp  testMakros.h
Aufgabe07/Code/testAssets/: WordSeqPlusCmds.txt  WordSeqPlusCmds1.txt  expectedTypes2.txt
Aufgabe08/: Bewertung.csv  Bewertung.xlsx  CMakeLists.txt  delAuto.bat
Aufgabe08/Code/: AtcoCmds.cpp  AtcoCmds.h  AtcoCommand.cpp  AtcoCommand.h  DynArray.cpp  DynArray.h  FileName.h  NumberExtractor.cpp  NumberExtractor.h  Processing.cpp  Processing.h  TestCode.cpp  TestCode.h  Tests.cpp  Tests.h  Util.h  dosFarben.h  main.cpp  testMakros.h
Aufgabe08/Code/testAssets/: BigChallenges.txt  CallsignCorrection.txt  CallsignExtractionBachelor.txt  CallsignExtractionMaster.txt  ChallengesMaster.txt  ExtractedNumbersCallsignEx1.txt  NumberCorrection.txt  NumbersWithCallsignsEx1.txt
Aufgabe08/Hilfscode/: NATOAlphabet.cpp  NATOAlphabet.cxx  NATOAlphabet.h  designators.json
